# coding_projects

4 Player Pong IN ASSEMBLY/: Pong.X68
Angular Projects/DiveLogStart/: index.html
Angular Projects/DiveRules/: package.json
Angular Projects/DiveSites/: index.html
Angular Projects/DiveSitesServices/: index.html
Angular Projects/InventoryApp/: package.json
Angular Projects/advanced-components/: package.json
Angular Projects/hybrid/: README.md  package.json
Angular Projects/redux-chat/: README.md
Angular_Chat_Two_Ways/rxjs-chat/: package.json
Artificial Intelligence Code/Project 1/: ADJACENCY_LIST.txt  (+45 more)
CPU Ray Tracer with BVH/src/: AABBox.cpp  AABBox.h  AttributeArray.h  BVH.cpp  BVH.h  CMakeLists.txt  Lightmap.cc  Lightmap.h  Mesh.h  MyRay.cc  MyRay.h  Object.cc  Object.h  PointObject.cc  PointObject.h  PointTracer.cc  PointTracer.h  RayTracer.cc  RayTracer.h  ShooterCamera.cc  ShooterCamera.h  aitMain.cpp  lmgenMain.cpp  pointMain.cpp  transformations.h
Computer Graphics/GLSL Materials/: BRDFRead.cpp  Brdf.cc  Brdf.h  Brdf.tcc  BrdfHash.cc  BrdfHash.h  CMakeLists.txt  GenerateHash.cc  ProcessImage.cc
Computer Graphics/Lighting Example/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Lighting.frag  Lighting.vert  Makefile  Mesh.cc  Mesh.h  ScreenSpaceQuad.cpp  ShooterCamera.cc  ShooterCamera.h  aitMain.cpp  arch0.vbo  bgdiff.hdr  can0.vbo  cmake_install.cmake  color.frag  color.vert  diffEnviron.frag  diffEnviron.vert  grace.tga  gracediff.tga  lego-merged.vbo  lego0.vbo  lightingpass.frag  lightingpass.vert  maskpass.frag  maskpass.vert  reflections.frag  refractions.frag  refractions.vert  shadowpass.frag  shadowpass.vert  showtex.frag  showtex.vert  skybox.cc  skybox.frag  skybox.h  (+13 more)
Hidden Markov Model Gesture Recognizer/: CodeBook.cpp  CodeBook.h  Gesture.cpp  Gesture.h  GestureCollection.cpp  GestureCollection.h  HMM.cpp  HMM.h  HMMGestureRecognizer.aps  HMMGestureRecognizer.vcproj  HMMGestureRecognizer.vcxproj  HMMGestureRecognizer.vcxproj.filters  KinectHandler.cpp  KinectHandler.h  Menu.cpp  Menu.h  ObservationSeq.cpp  ObservationSeq.h  main.cpp
(+1641 files in other folders)
